Add blowup references.

--- a/All.bib
+++ b/All.bib
@@ -6770,23 +6770,6 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -6800,6 +6783,23 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -7995,6 +7995,23 @@
   url		= {https://doi.org/10.1007/BF01206230}
 }
 
+@InCollection{	  buckdahn.pardoux:90:monotonicity,
+  author	= {Buckdahn, R. and Pardoux, \'{E}.},
+  title		= {Monotonicity methods for white noise driven quasi-linear
+		  {SPDE}s},
+  booktitle	= {Diffusion processes and related problems in analysis,
+		  {V}ol. {I} ({E}vanston, {IL}, 1989)},
+  series	= {Progr. Probab.},
+  volume	= {22},
+  pages		= {219--233},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {1990},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {1110165},
+  doi		= {10.1007/978-1-4684-0564-4\_13},
+  url		= {https://doi.org/10.1007/978-1-4684-0564-4_13}
+}
+
 @Article{	  budd.dold.ea:15:global,
   author	= {Budd, C. J. and Dold, J. W. and Galaktionov, V. A.},
   title		= {Global blow-up for a semilinear heat equation on a
@@ -8047,6 +8064,23 @@
   mrreviewer	= {Yvan Martel},
   doi		= {10.1098/rspa.1998.0263},
   url		= {https://doi.org/10.1098/rspa.1998.0263}
+}
+
+@Article{	  budd.huang.ea:96:moving,
+  author	= {Budd, Chris J. and Huang, Weizhang and Russell, Robert
+		  D.},
+  title		= {Moving mesh methods for problems with blow-up},
+  journal	= {SIAM J. Sci. Comput.},
+  fjournal	= {SIAM Journal on Scientific Computing},
+  volume	= {17},
+  year		= {1996},
+  number	= {2},
+  pages		= {305--327},
+  issn		= {1064-8275},
+  mrclass	= {65M50 (35K55 65M20)},
+  mrnumber	= {1374282},
+  doi		= {10.1137/S1064827594272025},
+  url		= {https://doi.org/10.1137/S1064827594272025}
 }
 
 @InCollection{	  burda.jurkiewicz:11:heavy-tailed,
@@ -8391,22 +8425,7 @@
   url		= {https://doi.org/10.2307/2154895}
 }
 
-@InCollection{	  cairoli.dalang:95:optimal,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
-}
-
-@Article{	  cairoli.dalang:95:optimal*1,
+@Article{	  cairoli.dalang:95:optimal,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -8420,6 +8439,21 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
+}
+
+@InCollection{	  cairoli.dalang:95:optimal*1,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -11725,7 +11759,23 @@
   url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
 
-@Article{	  chen:00:on,
+@InCollection{	  chen:00:on,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
+}
+
+@Article{	  chen:00:on*1,
   author	= {Chen, Xia},
   title		= {On the limit laws of the second order for additive
 		  functionals of {H}arris recurrent {M}arkov chains},
@@ -11740,22 +11790,6 @@
   mrnumber	= {1736591},
   doi		= {10.1007/PL00008724},
   url		= {https://doi.org/10.1007/PL00008724}
-}
-
-@InCollection{	  chen:00:on*1,
-  author	= {Chen, Xia},
-  title		= {On the law of the iterated logarithm for local times of
-		  recurrent random walks},
-  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
-		  1999)},
-  series	= {Progr. Probab.},
-  volume	= {47},
-  pages		= {249--259},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2000},
-  mrclass	= {60F15 (60J55)},
-  mrnumber	= {1857326},
-  mrreviewer	= {Ingemar Kaj}
 }
 
 @Article{	  chen:01:exact,
@@ -12965,17 +12999,6 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -12991,6 +13014,17 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -13284,6 +13318,22 @@
   mrclass	= {53A10},
   mrnumber	= {2383703},
   mrreviewer	= {Fei-Tsen Liang}
+}
+
+@Article{	  cortazar.elgueta:91:unstability,
+  author	= {Cort\'{a}zar, Carmen and Elgueta, Manuel},
+  title		= {Unstability of the steady solution of a nonlinear
+		  reaction-diffusion equation},
+  journal	= {Houston J. Math.},
+  fjournal	= {Houston Journal of Mathematics},
+  volume	= {17},
+  year		= {1991},
+  number	= {2},
+  pages		= {149--155},
+  issn		= {0362-1588},
+  mrclass	= {35K57},
+  mrnumber	= {1115140},
+  mrreviewer	= {L. Hsiao}
 }
 
 @Article{	  cortazar.pino.ea:98:on,
@@ -16158,23 +16208,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -16190,6 +16223,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -16305,6 +16355,25 @@
   mrreviewer	= {Peter D. Hislop},
   doi		= {10.1017/CBO9780511623721},
   url		= {https://doi.org/10.1017/CBO9780511623721}
+}
+
+@Article{	  davila.bonder.ea:05:numerical,
+  author	= {D\'{a}vila, Juan and Bonder, Julian Fern\'{a}ndez and
+		  Rossi, Julio D. and Groisman, Pablo and Sued, Mariela},
+  title		= {Numerical analysis of stochastic differential equations
+		  with explosions},
+  journal	= {Stoch. Anal. Appl.},
+  fjournal	= {Stochastic Analysis and Applications},
+  volume	= {23},
+  year		= {2005},
+  number	= {4},
+  pages		= {809--825},
+  issn		= {0736-2994},
+  mrclass	= {60H35 (60H10 65C30)},
+  mrnumber	= {2153586},
+  mrreviewer	= {Roger Pettersson},
+  doi		= {10.1081/SAP-200064484},
+  url		= {https://doi.org/10.1081/SAP-200064484}
 }
 
 @Book{		  davis:62:introduction,
@@ -18236,21 +18305,6 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -18263,6 +18317,21 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -19629,6 +19698,20 @@
 @Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {II}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xviii+396},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698780}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -19639,20 +19722,6 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698779}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {II}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xviii+396},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698780}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -20555,6 +20624,43 @@
   mrclass	= {60K35 (60B20)},
   mrnumber	= {2932658},
   mrreviewer	= {Tomohiro Sasamoto}
+}
+
+@Article{	  ferreira.groisman.ea:03:adaptive,
+  author	= {Ferreira, Ra\'{u}l and Groisman, Pablo and Rossi, Julio
+		  D.},
+  title		= {Adaptive numerical schemes for a parabolic problem with
+		  blow-up},
+  journal	= {IMA J. Numer. Anal.},
+  fjournal	= {IMA Journal of Numerical Analysis},
+  volume	= {23},
+  year		= {2003},
+  number	= {3},
+  pages		= {439--463},
+  issn		= {0272-4979},
+  mrclass	= {65M50 (35B40 35K60)},
+  mrnumber	= {1987939},
+  doi		= {10.1093/imanum/23.3.439},
+  url		= {https://doi.org/10.1093/imanum/23.3.439}
+}
+
+@Article{	  ferreira.groisman.ea:04:numerical,
+  author	= {Ferreira, Ra\'{u}l and Groisman, Pablo and Rossi, Julio
+		  D.},
+  title		= {Numerical blow-up for the porous medium equation with a
+		  source},
+  journal	= {Numer. Methods Partial Differential Equations},
+  fjournal	= {Numerical Methods for Partial Differential Equations. An
+		  International Journal},
+  volume	= {20},
+  year		= {2004},
+  number	= {4},
+  pages		= {552--575},
+  issn		= {0749-159X},
+  mrclass	= {65M60 (35K57 76S05)},
+  mrnumber	= {2060779},
+  doi		= {10.1002/num.10103},
+  url		= {https://doi.org/10.1002/num.10103}
 }
 
 @Article{	  feyel.ustunel:02:measure,
@@ -23293,24 +23399,6 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -23326,6 +23414,24 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -23960,6 +24066,24 @@
   mrclass	= {35J25 (35-02)},
   mrnumber	= {775683},
   mrreviewer	= {P. Szeptycki}
+}
+
+@Article{	  groisman:06:totally,
+  author	= {Groisman, Pablo},
+  title		= {Totally discrete explicit and semi-implicit {E}uler
+		  methods for a blow-up problem in several space dimensions},
+  journal	= {Computing},
+  fjournal	= {Computing. Archives for Scientific Computing},
+  volume	= {76},
+  year		= {2006},
+  number	= {3-4},
+  pages		= {325--352},
+  issn		= {0010-485X},
+  mrclass	= {65M12 (35K20 35K55 65M06 65M55)},
+  mrnumber	= {2210101},
+  mrreviewer	= {Jaan Janno},
+  doi		= {10.1007/s00607-005-0136-0},
+  url		= {https://doi.org/10.1007/s00607-005-0136-0}
 }
 
 @Book{		  gromak.laine.ea:02:painleve,
@@ -24916,6 +25040,45 @@
   mrreviewer	= {Fred Espen Benth},
   doi		= {10.1214/aop/1022677386},
   url		= {https://doi.org/10.1214/aop/1022677386}
+}
+
+@Article{	  gyongy.pardoux:93:on,
+  author	= {Gy\"{o}ngy, Istv\'{a}n and Pardoux, \'{E}.},
+  title		= {On the regularization effect of space-time white noise on
+		  quasi-linear parabolic partial differential equations},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {97},
+  year		= {1993},
+  number	= {1-2},
+  pages		= {211--229},
+  issn		= {0178-8051},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {1240724},
+  mrreviewer	= {Kazuaki Taira},
+  doi		= {10.1007/BF01199321},
+  url		= {https://doi.org/10.1007/BF01199321}
+}
+
+@Article{	  gyongy:98:lattice,
+  author	= {Gy\"{o}ngy, Istv\'{a}n},
+  title		= {Lattice approximations for stochastic quasi-linear
+		  parabolic partial differential equations driven by
+		  space-time white noise. {I}},
+  journal	= {Potential Anal.},
+  fjournal	= {Potential Analysis. An International Journal Devoted to
+		  the Interactions between Potential Theory, Probability
+		  Theory, Geometry and Functional Analysis},
+  volume	= {9},
+  year		= {1998},
+  number	= {1},
+  pages		= {1--25},
+  issn		= {0926-2601},
+  mrclass	= {60H15 (35K55 35R60)},
+  mrnumber	= {1644183},
+  mrreviewer	= {David Nualart},
+  doi		= {10.1023/A:1008615012377},
+  url		= {https://doi.org/10.1023/A:1008615012377}
 }
 
 @Book{		  hahn.ozisik:12:heat,
@@ -36185,6 +36348,24 @@
   url		= {https://doi.org/10.1080/17442509108833677}
 }
 
+@Article{	  mao.marion.ea:02:environmental,
+  author	= {Mao, Xuerong and Marion, Glenn and Renshaw, Eric},
+  title		= {Environmental {B}rownian noise suppresses explosions in
+		  population dynamics},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {97},
+  year		= {2002},
+  number	= {1},
+  pages		= {95--110},
+  issn		= {0304-4149},
+  mrclass	= {60J65 (60H10 92D25)},
+  mrnumber	= {1870962},
+  mrreviewer	= {Kun Soo Chang},
+  doi		= {10.1016/S0304-4149(01)00126-0},
+  url		= {https://doi.org/10.1016/S0304-4149(01)00126-0}
+}
+
 @Article{	  march.seppalainen:94:bounds,
   author	= {March, Peter and Sepp\"{a}l\"{a}inen, Timo},
   title		= {Bounds for least relative vacancy in a simple mosaic
@@ -40239,7 +40420,21 @@
   url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
-@Article{	  nane:06:iterated*1,
+@Book{		  nane:06:iterated*1,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
+		  isoperimetric-type inequalities},
+  note		= {Thesis (Ph.D.)--Purdue University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {2006},
+  pages		= {47},
+  isbn		= {978-0542-86606-7},
+  mrclass	= {Thesis},
+  mrnumber	= {2709290},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
+}
+
+@Article{	  nane:06:iterated*2,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -40256,20 +40451,6 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
-}
-
-@Book{		  nane:06:iterated*2,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
-		  isoperimetric-type inequalities},
-  note		= {Thesis (Ph.D.)--Purdue University},
-  publisher	= {ProQuest LLC, Ann Arbor, MI},
-  year		= {2006},
-  pages		= {47},
-  isbn		= {978-0542-86606-7},
-  mrclass	= {Thesis},
-  mrnumber	= {2709290},
-  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
 @Article{	  nane:06:laws,
@@ -41263,23 +41444,6 @@
 
 @Article{	  nourdin.peccati:09:steins,
   author	= {Nourdin, Ivan and Peccati, Giovanni},
-  title		= {Stein's method on {W}iener chaos},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {145},
-  year		= {2009},
-  number	= {1-2},
-  pages		= {75--118},
-  issn		= {0178-8051},
-  mrclass	= {60F05 (60G05 60H07)},
-  mrnumber	= {2520122},
-  mrreviewer	= {Anthony R\'{e}veillac},
-  doi		= {10.1007/s00440-008-0162-x},
-  url		= {https://doi.org/10.1007/s00440-008-0162-x}
-}
-
-@Article{	  nourdin.peccati:09:steins*1,
-  author	= {Nourdin, Ivan and Peccati, Giovanni},
   title		= {Stein's method and exact {B}erry-{E}sseen asymptotics for
 		  functionals of {G}aussian fields},
   journal	= {Ann. Probab.},
@@ -41294,6 +41458,23 @@
   mrreviewer	= {Jean-Pierre Fouque},
   doi		= {10.1214/09-AOP461},
   url		= {https://doi.org/10.1214/09-AOP461}
+}
+
+@Article{	  nourdin.peccati:09:steins*1,
+  author	= {Nourdin, Ivan and Peccati, Giovanni},
+  title		= {Stein's method on {W}iener chaos},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {145},
+  year		= {2009},
+  number	= {1-2},
+  pages		= {75--118},
+  issn		= {0178-8051},
+  mrclass	= {60F05 (60G05 60H07)},
+  mrnumber	= {2520122},
+  mrreviewer	= {Anthony R\'{e}veillac},
+  doi		= {10.1007/s00440-008-0162-x},
+  url		= {https://doi.org/10.1007/s00440-008-0162-x}
 }
 
 @Article{	  nourdin.peccati:10:cumulants,
@@ -41563,24 +41744,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of one-dimensional {SDE}s
-		  driven by a fractional {B}rownian motion},
-  journal	= {Statist. Probab. Lett.},
-  fjournal	= {Statistics \& Probability Letters},
-  volume	= {76},
-  year		= {2006},
-  number	= {9},
-  pages		= {907--912},
-  issn		= {0167-7152},
-  mrclass	= {60G18 (60H10)},
-  mrnumber	= {2268434},
-  mrreviewer	= {Andreas Neuenkirch},
-  doi		= {10.1016/j.spl.2005.10.021},
-  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of {L}\'{e}vy processes with
 		  drift},
   journal	= {Ann. Probab.},
@@ -41595,6 +41758,24 @@
   mrreviewer	= {Tina M. Marquardt},
   doi		= {10.1214/009117905000000620},
   url		= {https://doi.org/10.1214/009117905000000620}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of one-dimensional {SDE}s
+		  driven by a fractional {B}rownian motion},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {76},
+  year		= {2006},
+  number	= {9},
+  pages		= {907--912},
+  issn		= {0167-7152},
+  mrclass	= {60G18 (60H10)},
+  mrnumber	= {2268434},
+  mrreviewer	= {Andreas Neuenkirch},
+  doi		= {10.1016/j.spl.2005.10.021},
+  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -42517,21 +42698,6 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -42547,6 +42713,21 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -49424,24 +49605,6 @@
 
 @Article{	  seppalainen:93:large,
   author	= {Sepp\"{a}l\"{a}inen, Timo},
-  title		= {Large deviations for lattice systems. {II}.
-		  {N}onstationary independent fields},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {97},
-  year		= {1993},
-  number	= {1-2},
-  pages		= {103--112},
-  issn		= {0178-8051},
-  mrclass	= {60F10 (60G60)},
-  mrnumber	= {1240718},
-  mrreviewer	= {Francis Comets},
-  doi		= {10.1007/BF01199314},
-  url		= {https://doi.org/10.1007/BF01199314}
-}
-
-@Article{	  seppalainen:93:large*1,
-  author	= {Sepp\"{a}l\"{a}inen, Timo},
   title		= {Large deviations for lattice systems. {I}. {P}arametrized
 		  independent fields},
   journal	= {Probab. Theory Related Fields},
@@ -49456,6 +49619,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/BF01192135},
   url		= {https://doi.org/10.1007/BF01192135}
+}
+
+@Article{	  seppalainen:93:large*1,
+  author	= {Sepp\"{a}l\"{a}inen, Timo},
+  title		= {Large deviations for lattice systems. {II}.
+		  {N}onstationary independent fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {97},
+  year		= {1993},
+  number	= {1-2},
+  pages		= {103--112},
+  issn		= {0178-8051},
+  mrclass	= {60F10 (60G60)},
+  mrnumber	= {1240718},
+  mrreviewer	= {Francis Comets},
+  doi		= {10.1007/BF01199314},
+  url		= {https://doi.org/10.1007/BF01199314}
 }
 
 @Article{	  seppalainen:94:large,
@@ -52134,23 +52315,6 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -52165,6 +52329,23 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
