--- a/All.bib
+++ b/All.bib
@@ -2507,13 +2507,13 @@
   url		= {https://doi.org/10.1214/21-aihp1207}
 }
 
-@Article{	  balan.chen.ea:22:parabolic,
+@Article{	  balan.chen.ea:23:parabolic,
   title		= {Parabolic Anderson model with rough noise in space and
 		  rough initial conditions},
   author	= {Raluca M. Balan and Le Chen and Yiping Ma},
-  year		= {2022},
+  year		= {2023},
   month		= {June},
-  journal	= {preprint arXiv:2206.11361},
+  journal	= {Electron. Coummu. Probab. (in process)},
   url		= {https://www.arxiv.org/abs/2206.11361}
 }
 
@@ -8425,7 +8425,22 @@
   url		= {https://doi.org/10.2307/2154895}
 }
 
-@Article{	  cairoli.dalang:95:optimal,
+@InCollection{	  cairoli.dalang:95:optimal,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
+}
+
+@Article{	  cairoli.dalang:95:optimal*1,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -8439,21 +8454,6 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
-}
-
-@InCollection{	  cairoli.dalang:95:optimal*1,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -42698,6 +42698,21 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -42713,21 +42728,6 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -50803,6 +50803,24 @@
   url		= {https://doi.org/10.1214/EJP.v8-129}
 }
 
+@Article{	  su.lei.ea:21:tracy-widom,
+  author	= {Su, Zhong-gen and Lei, Yu-huan and Shen, Tian},
+  title		= {Tracy-{W}idom distribution, {${\rm Airy}_2$} process and
+		  its sample path properties},
+  journal	= {Appl. Math. J. Chinese Univ. Ser. B},
+  fjournal	= {Applied Mathematics. A Journal of Chinese Universities.
+		  Ser. B},
+  volume	= {36},
+  year		= {2021},
+  number	= {1},
+  pages		= {128--158},
+  issn		= {1005-1031},
+  mrclass	= {60K35 (60B20)},
+  mrnumber	= {4228470},
+  doi		= {10.1007/s11766-021-4251-2},
+  url		= {https://doi.org/10.1007/s11766-021-4251-2}
+}
+
 @Article{	  sudakov.cirel-son:74:extremal,
   author	= {Sudakov, V. N. and Cirel\cprime son, B. S.},
   title		= {Extremal properties of half-spaces for spherically
@@ -53463,6 +53481,25 @@
   mrnumber	= {2932662}
 }
 
+@Book{		  vershynin:18:high-dimensional,
+  author	= {Vershynin, Roman},
+  title		= {High-dimensional probability},
+  series	= {Cambridge Series in Statistical and Probabilistic
+		  Mathematics},
+  volume	= {47},
+  note		= {An introduction with applications in data science, With a
+		  foreword by Sara van de Geer},
+  publisher	= {Cambridge University Press, Cambridge},
+  year		= {2018},
+  pages		= {xiv+284},
+  isbn		= {978-1-108-41519-4},
+  mrclass	= {60-01 (60B05 60B20 60E15 60Fxx 62H25)},
+  mrnumber	= {3837109},
+  mrreviewer	= {Sasha Sodin},
+  doi		= {10.1017/9781108231596},
+  url		= {https://doi.org/10.1017/9781108231596}
+}
+
 @Article{	  viens.zhang:08:almost,
   author	= {Viens, Frederi G. and Zhang, Tao},
   title		= {Almost sure exponential behavior of a directed polymer in
@@ -53569,6 +53606,24 @@
   mrnumber	= {121856},
   doi		= {10.1137/1104015},
   url		= {https://doi.org/10.1137/1104015}
+}
+
+@Book{		  wainwright:19:high-dimensional,
+  author	= {Wainwright, Martin J.},
+  title		= {High-dimensional statistics},
+  series	= {Cambridge Series in Statistical and Probabilistic
+		  Mathematics},
+  volume	= {48},
+  note		= {A non-asymptotic viewpoint},
+  publisher	= {Cambridge University Press, Cambridge},
+  year		= {2019},
+  pages		= {xvii+552},
+  isbn		= {978-1-108-49802-9},
+  mrclass	= {62-01 (60B20 60E15 60Fxx 62Gxx 62Hxx 62Jxx)},
+  mrnumber	= {3967104},
+  mrreviewer	= {Pierre Alquier},
+  doi		= {10.1017/9781108627771},
+  url		= {https://doi.org/10.1017/9781108627771}
 }
 
 @InCollection{	  walsh:86:introduction,
